tests/netconvert/import/XML/errors/xml_looped_edge/errors.netconvert
Warning:  Removing self-looping edge '2'
Warning: 1 self-looping edge(s) removed.
